[package]
name = "rs-snowflake"
version = "0.6.0"
edition = "2024"
repository = "https://github.com/pinksuko/snowflake-rs.git"
documentation = "https://docs.rs/rs-snowflake"
readme = "README.md"
description = "Rust version of the Twitter snowflake algorithm."
keywords = [ "snowflake", "distributed-id", "speediness", "uniqueness", "auto-increment" ]
categories = ["development-tools", "data-structures", "algorithms"]

license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "snowflake"

[dependencies]
